[metadata]
name = youtube-podcaster
summary = Converts youtube playlists to RSS-feeds
author = Tom van der Lee
author-email = t0m.vd.l33@gmail.com
license = MIT License
home-page = http://github.com/tomvanderlee/youtube-podcaster
description-file = README.rst
classifiers = Development Status :: 3 - Alpha,
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3 :: Only

[entry_points]
console_scripts = 
	youtube-podcaster = youtube_podcaster:main

[files]
packages = 
	youtube_podcaster
data_files = 
	share/man/man1/ = docs/_build/man/*
	share/youtube-podcaster/ = youtube-podcaster.json.example

[extras]

[test]
addopts = tests

[pytest]
addopts = 
	--cov youtube_podcaster --cov-report term-missing
	--verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
format = bdist_wheel

[easy_install]

